--- a/data-structure-advance-assignment.ipynb
+++ b/data-structure-advance-assignment.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "name": "data-structure-advance-assignment Nikhil.ipynb"
+      "name": "data-structure-advance-assignment Nikhil.ipynb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/gist/1431Nikhil/0342a5b29e7de8a0bbf205e26be687bc/data-structure-advance-assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
